refactor: Optimize code